test/sema/typeck/trait/default-method-with-assoc-type-chained-static-call.dora
trait Bar {
    static fn Foo(): Self;
    static fn Baz(): Self;
}

trait Foo {
    type T: Bar;
    fn make(): Self::T {
        Self::T::Foo::Baz()
    }
}
